--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Layout responsivo</title>
     <link rel="stylesheet" href="style.css">
 
+    <link rel="shortcut icon" href="favicon.ico.png" type="image/x-icon">
+
 </head>
 <body>
     <header class="header">
