--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         </nav>
     </header>
 
-    <h1>Carros</h1>
+    <div class="titulo">
+        <h1>Carros</h1>
+    </div>
 
     <section class="grid">
         <div class="card">
