tag Abbr e margem

--- a/index.html
+++ b/index.html
@@ -42,32 +42,32 @@
 
     <section class="grid">
         <div class="card">
-            <a href="https://www.audi.com.br/br/web/pt.html" target="_blank" rel="external"><img src="img05.jpg" alt=""></a>
+            <a href="https://www.audi.com.br/br/web/pt.html" target="_blank" rel="external"><abbr title="clique para abrir o site da Audi"><img src="img05.jpg" alt=""></abbr></a>
             <p>Audi</p>
         </div>
 
         <div class="card">
-            <a href="https://www.webmotors.com.br/carros/estoque/ford/mustang" target="_blank" rel="external"><img src="img02.jpg" alt=""></a>
+            <a href="https://www.webmotors.com.br/carros/estoque/ford/mustang" target="_blank" rel="external"><abbr title="clique para abrir o site do Mustang"><img src="img02.jpg" alt=""></abbr></a>
             <p>Mustang</p>
         </div>
 
         <div class="card">
-            <a href="https://www.porsche.com/brazil/pt/models/" target="_blank" rel="external"><img src="img03.jpg" alt=""></a>
+            <a href="https://www.porsche.com/brazil/pt/models/" target="_blank" rel="external"><abbr title="clique para abrir o site da Porsche"><img src="img03.jpg" alt=""></abbr></a>
             <p>Porsche</p>
         </div>
 
         <div class="card">
-            <a href="https://www.bugatti.com/" target="_blank" rel="external"><img src="img04.jpg" alt=""></a>
+            <a href="https://www.bugatti.com/" target="_blank" rel="external"><abbr title="clique para abrir o site da Bugatti"><img src="img04.jpg" alt=""></abbr></a>
             <p>Bugatti</p>
         </div>
 
         <div class="card">
-            <a href="https://www2.mercedes-benz.com.br/?group=all&subgroup=see-all&view=BODYTYPE" target="_blank" rel="external"><img src="img01.jpg" alt=""></a>
+            <a href="https://www2.mercedes-benz.com.br/?group=all&subgroup=see-all&view=BODYTYPE" target="_blank" rel="external"><abbr title="clique para abrir o site da Mercedes"><img src="img01.jpg" alt=""></abbr></a>
             <p>Mercedes</p>
         </div>
 
         <div class="card">
-            <a href="https://www.bmw.com.br/pt/index.html" target="_blank" rel="external"><img src="img06.jpg" alt=""></a>
+            <a href="https://www.bmw.com.br/pt/index.html" target="_blank" rel="external"><abbr title="clique para abrir o site da BMW"><img src="img06.jpg" alt=""></abbr></a>
             <p>BMW</p>
         </div>
     </section>
