--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 
         <div class="card">
-            <a href="https://www.webmotors.com.br/carros/estoque/ford/mustang" target="_blank" rel="external"><abbr title="clique para abrir o site do Mustang"><img src="img02.jpg" alt=""></abbr></a>
+            <a href="https://www.ford.com.br/performance/mustang/" target="_blank" rel="external"><abbr title="clique para abrir o site do Mustang"><img src="img02.jpg" alt=""></abbr></a>
             <p>Mustang</p>
         </div>
 
